[workspace]
resolver = "2"
members = [
    "journal/error",
    "journal/journal_file",
    "journal/journal_reader_ffi",
    "journal/journal_log",
    "journal/window_manager",
    "journal/sigbus",
    "otel-plugin",
    "flatten_otel",
    "flog-otel",
    "netdata-plugin/proto",
    "netdata-plugin/protocol",
    "netdata-plugin/runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
atoi = "2.0"
atty = "0.2"
bytes = "1"
bytesize = "1.3"
bytesize-serde = "0.2"
cbindgen = "0.29"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
duct = "0.13"
hex = "0.4"
humantime = "2.2"
humantime-serde = "1.1"
hyper-util = "0.1"
indexmap = "2.9"
libc = "0.2"
memmap2 = "0.9"
opentelemetry-proto = "0.30"
phf_codegen = "0.12"
phf = { version = "0.12", default-features = false }
prost = "0.13"
prost-build = "0.13"
rand = "0.9"
regex = "1.10"
ruzstd = "0.8"
serde_json = "1.0"
serde_regex = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
siphasher = "1.0"
static_assertions = "1.1"
tempfile = "3"
thiserror = "2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "process", "io-util"] }
tonic = "0.13"
tonic-build = "0.13"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
twox-hash = { version = "2.1", default-features = false, features = ["std"] }
uuid = { version = "1.0", features = ["v4", "rng"] }
walkdir = "2"
zerocopy = { version = "0.9.0-alpha.0", features = ["derive"] }
schemars = "1.0"

[profile.release]
lto = true
codegen-units = 1
