[workspace]
resolver = "2"
members = [
    "cli",
    "error",
    "gorilla",
    "main",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bitvec = "1.0"
bytes = "1.10.0"
chrono = "0.4"
either = "1.13"
prost = "0.13"
prost-build = "0.13"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
zerocopy = "0.8.17"
zerocopy-derive = "0.8.17"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
