[workspace]
resolver = "2"
members = [
    "error",
    "main",
    "object_file",
    "journal_reader",
    "journal_reader_ffi",
    "journal_logger",
    "journal_forwarder",
    "window_manager", "journal_forwarder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
memmap2 = "0.9"
zerocopy = { version = "0.9.0-alpha.0", features = ["derive"] }
thiserror = "2"
rand = "0.9"
siphasher = "1.0"
twox-hash = "2.1"
static_assertions = "1.1"
duct = "0.13"
serde_json = "1.0"
walkdir = "2"
ruzstd = "0.8"
systemd = { path = "/home/vk/repos/crates/rust-systemd"}

[profile.release]
lto = true
codegen-units = 1
