[workspace]
resolver = "2"
members = [
    "error",
    # "main",
    "journal_file",
    # "journal_writer",
    "journal_reader",
    "journal_reader_ffi",
    # "journal_logger",
    # "journal_forwarder",
    "window_manager",
    "sigbus",
    "otel-plugin",
    "flatten_otel",
    "netdata-bridge",
    "my-plugin"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
memmap2 = "0.9"
zerocopy = { version = "0.9.0-alpha.0", features = ["derive"] }
thiserror = "2"
rand = "0.9"
siphasher = "1.0"
twox-hash = { version = "2.1", default-features = false, features = ["std"] }
static_assertions = "1.1"
duct = "0.13"
serde_json = "1.0"
walkdir = "2"
ruzstd = "0.8"
# systemd = { path = "/home/vk/repos/crates/rust-systemd"}
libc = "0.2"

# otel-plugin
prost = "0.13"
regex = "1.10"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
prost-build = "0.13"
hyper-util = "0.1"
tower = "0.5"
opentelemetry-proto = "0.30"
atty = "0.2"

clap = { version = "4.5", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
