[package]
name = "journal-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
allocative = { workspace = true }
rustc-hash = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nix = { workspace = true, features = ["time"] }
