[package]
name = "journal-core"
version = "0.1.0"
edition = "2024"

[lints.clippy]
collapsible_if = "allow"

[features]
allocative = ["dep:allocative"]

[dependencies]
# Core dependencies
static_assertions = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true , features = ["derive"] }
libc = { workspace = true }
memmap2 = { workspace = true }
uuid = { workspace = true , features = ["v4", "rng", "serde"] }
nix = { workspace = true }

# File format dependencies
ruzstd = { workspace = true }
zstd = { workspace = true }
siphasher = { workspace = true }

twox-hash = { workspace = true, features = ["std"] }
rand = { workspace = true }

lz4 = { workspace = true }

serde = { workspace =  true, features = ["derive"] }

rustc-hash = { workspace = true }

# Registry dependencies
parking_lot = { workspace = true }
walkdir = { workspace = true }
crossbeam-channel = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }

tracing = { workspace = true }
allocative = { workspace = true, optional = true }

tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "basic_usage_with_cache"
path = "examples/basic_usage_with_cache.rs"

[[example]]
name = "paths"
path = "examples/paths.rs"

[[example]]
name = "head_tail_seqnum"
path = "examples/head_tail_seqnum.rs"
