[package]
name = "journal-datafusion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "journal-datafusion"
path = "src/main.rs"

[dependencies]
# DataFusion dependencies (using local paths to the existing DataFusion repo)
datafusion = { path = "/home/vk/repos/crates/datafusion/datafusion/core", default-features = false, features = ["unicode_expressions"] }
datafusion-catalog = { path = "/home/vk/repos/crates/datafusion/datafusion/catalog", default-features = false }
datafusion-common = { path = "/home/vk/repos/crates/datafusion/datafusion/common", default-features = false }
datafusion-datasource = { path = "/home/vk/repos/crates/datafusion/datafusion/datasource", default-features = false }
datafusion-expr = { path = "/home/vk/repos/crates/datafusion/datafusion/expr", default-features = false }
datafusion-physical-plan = { path = "/home/vk/repos/crates/datafusion/datafusion/physical-plan", default-features = false }
datafusion-physical-expr = { path = "/home/vk/repos/crates/datafusion/datafusion/physical-expr", default-features = false }
datafusion-execution = { path = "/home/vk/repos/crates/datafusion/datafusion/execution", default-features = false }

# Journal system dependencies (local)
journal_registry = { path = "../journal/journal_registry" }
journal_file = { path = "../journal/journal_file" }

# Arrow dependencies 
arrow = { version = "55.2.0", default-features = false, features = ["prettyprint"] }
arrow-schema = { version = "55.2.0", default-features = false }

# Other dependencies
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0", default-features = false, features = ["derive", "std", "help", "usage"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
parking_lot = { version = "0.12", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }