[package]
name = "journal-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
allocative = [
    "dep:allocative",
    "roaring/allocative",
    "journal-core/allocative",
    "journal-common/allocative",
    "journal-registry/allocative"
]

[dependencies]
allocative = { workspace = true, optional = true }
regex = { workspace = true }
roaring = { workspace = true , features = ["serde"] }
serde = { workspace =  true, features = ["derive"] }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

journal-core = { path = "../journal-core" }
journal-common = { workspace = true }
journal-registry = { workspace = true }

[dev-dependencies]
allocative = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
tree8 = { path = "../tree8", features = ["allocative", "roaring"] }
uuid = { workspace = true }

[[example]]
name = "tree8_comparison"
required-features = ["allocative"]
