[package]
name = "journal-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["bitmap-roaring"]
bitmap-roaring = ["dep:roaring"]
bitmap-treight = ["dep:treight"]
allocative = [
    "dep:allocative",
    "roaring?/allocative",
    "treight?/allocative",
    "journal-core/allocative",
    "journal-common/allocative",
    "journal-registry/allocative"
]

[dependencies]
allocative = { workspace = true, optional = true }
regex = { workspace = true }
roaring = { workspace = true, features = ["serde"], optional = true }
treight = { path = "../treight", features = ["serde"], optional = true }
serde = { workspace =  true, features = ["derive"] }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

journal-core = { path = "../journal-core" }
journal-common = { workspace = true }
journal-registry = { workspace = true }

[dev-dependencies]
allocative = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
treight = { path = "../treight", features = ["allocative", "roaring"] }
uuid = { workspace = true }

[[example]]
name = "treight_comparison"
required-features = ["allocative"]
