[package]
name = "journal-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
journal-common = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
notify = { workspace = true }
walkdir = { workspace = true }
crossbeam-channel = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional allocative support for memory profiling
allocative = { workspace = true, optional = true }

[features]
allocative = ["dep:allocative"]
