[package]
name = "journal-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
journal-common = { workspace = true }

uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
notify = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }

# Optional allocative support for memory profiling
allocative = { workspace = true, optional = true }

[features]
allocative = ["dep:allocative"]
