[package]
name = "journal"
version = "0.1.0"
edition = "2024"

[lints.clippy]
collapsible_if = "allow"

[features]
allocative = ["dep:allocative", "roaring/allocative"]
indexing-stats = ["dep:hdrhistogram"]
serde-api = ["dep:flatten-serde-json"]

[dependencies]
# Core dependencies
static_assertions = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true , features = ["derive"] }
libc = { workspace = true }
memmap2 = { workspace = true }
uuid = { workspace = true , features = ["v4", "rng", "serde"] }
nix = { workspace = true }

# File format dependencies
ruzstd = { workspace = true }
zstd = { workspace = true }
siphasher = { workspace = true }

twox-hash = { workspace = true, features = ["std"] }
rand = { workspace = true }
roaring = { workspace = true , features = ["serde"] }

lz4 = { workspace = true }

serde = { workspace =  true, features = ["derive"] }

rustc-hash = { workspace = true }

# File index depedencies
bincode = { workspace = true }
notify = { workspace = true }

# Registry dependencies
parking_lot = { workspace = true }
walkdir = { workspace = true }
crossbeam-channel = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
bitvec = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
arbitrary = { workspace = true }

tracing = { workspace = true }
allocative = { workspace = true, optional = true }
hdrhistogram = { workspace = true, optional = true }

tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread"] }
flatten-serde-json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "basic_usage_with_cache"
path = "examples/basic_usage_with_cache.rs"

[[example]]
name = "histogram_viewer"
path = "examples/histogram_viewer.rs"

[[example]]
name = "filtered_histogram_viewer"
path = "examples/filtered_histogram_viewer.rs"

[[example]]
name = "file_index"
path = "examples/file_index.rs"

[[example]]
name = "fuzzy_histogram_test"
path = "examples/fuzzy_histogram_test.rs"

[[example]]
name = "paths"
path = "examples/paths.rs"

[[example]]
name = "head_tail_seqnum"
path = "examples/head_tail_seqnum.rs"

[[example]]
name = "structured_logging"
path = "examples/structured_logging.rs"
required-features = ["serde-api"]

[[example]]
name = "filtered_retrieval"
path = "examples/filtered_retrieval.rs"

