[package]
name = "journalctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "journalctl"
path = "src/main.rs"

[dependencies]
journal = { path = "../journal" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
