[package]
name = "journalctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "journalctl"
path = "src/main.rs"

[dependencies]
journal = { path = "../journal" }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
