[package]
name = "journalctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "journalctl"
path = "src/main.rs"

[dependencies]
journal-core = { workspace = true }
journal-index = { workspace = true }
journal-registry = { workspace = true }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
